Versao 1.1 do Projeto

--- a/principal.html
+++ b/principal.html
@@ -8,6 +8,12 @@
 
 <body style="background-color: darkgrey;">
 
+    <div class="header" id="header" style="padding-left: 45%; padding-top: 5%;">
+        <div id="navegacao_header">
+            <a href="/Curriculo/atualizacoes.html">Atualizacoes/Versoes</a>
+        </div>
+    </div>
+
     <div style="margin-left: 20%; margin-right: 20%; margin-top: 5%; margin-bottom: 50px;background-color: white;">
         <div style="padding-left: 10%; padding-top: 5%; display: flex;">
             <div>
@@ -38,11 +44,11 @@
                 <h2>Competências</h2>
                 <p style="padding-left: 5%;">
                     &#9679; Conhecimentos em Metrologia, AutoCAD e pacote Office. <br>
-                    &#9679 Participação ativa no desenvolvimento de projetos nas áreas de ciências em lógica de
+                    &#9679; Participação ativa no desenvolvimento de projetos nas áreas de ciências em lógica de
                     programação em C++, Arduino e Microcontroladores e circuitos eletrônicos. </br>
-                    &#9679 Participação ativa no desenvolvimento de projetos nas áreas de ciências em lógica de
+                    &#9679; Participação ativa no desenvolvimento de projetos nas áreas de ciências em lógica de
                     programação em C++, Arduino e Microcontroladores e circuitos eletrônicos. </br>
-                    &#9679 Experiência no processo de fabricação e execução de reparos em circuitos eletrônicos PTH
+                    &#9679; Experiência no processo de fabricação e execução de reparos em circuitos eletrônicos PTH
                     e SMD.
                 </p>
             </div>
@@ -51,39 +57,39 @@
                 <div name="cursoTecnico" style="padding-left: 5%;">
                     <h3>Curso Técnico</h3>
                     <p style="padding-left: 5%;">
-                        &#9679 Eletrônica, SENAI Anchieta – Julho / 2020. </br>
-                        &#9679 Mecatrônica, SENAI Anchieta – Dezembro / 2018.
+                        &#9679; Eletrônica, SENAI Anchieta – Julho / 2020. </br>
+                        &#9679; Mecatrônica, SENAI Anchieta – Dezembro / 2018.
                     </p>
                 </div>
                 <div name="graduacao" style="padding-left: 5%;">
                     <h3>Graduação</h3>
                     <p style="padding-left: 5%;">
-                        &#9679 Automação Industrial / Fatec Itaquera Miguel Reale (interrompido). <br>
-                        &#9679 Análise e Desenvolvimento de Sistemas / Impacta (conclusão no 1º semestre de 2023)
+                        &#9679; Automação Industrial / Fatec Itaquera Miguel Reale (interrompido). <br>
+                        &#9679; Análise e Desenvolvimento de Sistemas / Impacta (conclusão no 1º semestre de 2023)
                     </p>
                 </div>
             </div>
             <div name="cursosCertificacoes">
                 <h2>Cursos e Certificações</h2>
                 <p style="padding-left: 5%;">
-                    &#9679 JavaScript e TypeScript do básico ao avançado Udemy / 2022 <br>
-                    &#9679 Banco de Dados e SQL Udemy / 2022 <br>
-                    &#9679 PHP Essencial – Criando sistemas com PHP e MySQL Udemy / 2022 <br>
-                    &#9679 Lógica de Programação SENAI São Paulo / 2020 <br>
-                    &#9679 Tecnologia da Informação e Comunicação SENAI São Paulo / 2020 <br>
-                    &#9679 Informática Básica SENAI Santa Cecilia / 2015 <br>
-                    &#9679 Inglês básico <br>
+                    &#9679; JavaScript e TypeScript do básico ao avançado Udemy / 2022 <br>
+                    &#9679; Banco de Dados e SQL Udemy / 2022 <br>
+                    &#9679; PHP Essencial – Criando sistemas com PHP e MySQL Udemy / 2022 <br>
+                    &#9679; Lógica de Programação SENAI São Paulo / 2020 <br>
+                    &#9679; Tecnologia da Informação e Comunicação SENAI São Paulo / 2020 <br>
+                    &#9679; Informática Básica SENAI Santa Cecilia / 2015 <br>
+                    &#9679; Inglês básico <br>
                 </p>
             </div>
             <div name="experienciaProfissional">
                 <h2>Experiência Profissional</h2>
                 <p style="padding-left: 5%;">
-                    &#9679 GA Tecnologia Ltda – (Fevereiro / 2021 – Janeiro / 2022)
+                    &#9679; GA Tecnologia Ltda – (Fevereiro / 2021 – Janeiro / 2022)
                 </p>
                 <p style="padding-left: 5%;">
-                    &#10004 Responsável de produção de placas de circuitos eletrônicos e montagem de gabinetes
+                    &#10004; Responsável de produção de placas de circuitos eletrônicos e montagem de gabinetes
                     eletroeletrônicos. <br>
-                    &#10004 Participação ativa em testes de circuitos eletrônicos em baixa tensão e em alta tensão.
+                    &#10004; Participação ativa em testes de circuitos eletrônicos em baixa tensão e em alta tensão.
                 </p>
             </div>
         </div>
