git commit -m"Versao 1.2 criado arquivo css"

--- a/principal.html
+++ b/principal.html
@@ -4,22 +4,24 @@
 <head>
     <meta charset="utf-8">
     <title>Curriculo</title>
+    <link rel="stylesheet" href="principal.css">
 </head>
 
-<body style="background-color: darkgrey;">
+<body>
 
-    <div class="header" id="header" style="padding-left: 45%; padding-top: 5%;">
-        <div id="navegacao_header">
+    <div id="cabecalho">
+        <div>
             <a href="/Curriculo/atualizacoes.html">Atualizacoes/Versoes</a>
         </div>
     </div>
 
-    <div style="margin-left: 20%; margin-right: 20%; margin-top: 5%; margin-bottom: 50px;background-color: white;">
-        <div style="padding-left: 10%; padding-top: 5%; display: flex;">
+    <div id="folha">
+
+        <div id="fotEInformacao">
             <div>
-                <img src="FotoCV.png" alt="100" width="150" >
+                <img src="FotoCV.png" alt="Não foi possivel iniciar a imagem" width="150">
             </div>
-            <div style="padding-left: 55%; padding-right: 20%;">
+            <div id="informacao">
                 <p>21 anos, solteiro</p>
                 <p>Beco Manaus, N°50</p>
                 <p>Bairro: Eugênio Schneider</p>
@@ -28,11 +30,11 @@
                 <p>j.e.l.david@hotmail.com</p>
             </div>
         </div>
-        <div name="FotoNome">
-            <h1 style="padding-left: 8%;">João Eduardo Lima David</h1>
-        </div>
+
+        <h1 id="tituloNome">João Eduardo Lima David</h1>
         <hr size="5" width="90%" align="center" noshade>
-        <div style="padding-left: 8%;  margin-right: 101px;">
+        
+        <div id="objetivo">
             <div name="objetivo">
                 <h2>Objetivo</h2>
                 <p>
@@ -40,9 +42,9 @@
                     comperspectiva de futuro.
                 </p>
             </div>
-            <div name="compentencia">
+            <div>
                 <h2>Competências</h2>
-                <p style="padding-left: 5%;">
+                <p class="paragrafoPaddingLeft5">
                     &#9679; Conhecimentos em Metrologia, AutoCAD e pacote Office. <br>
                     &#9679; Participação ativa no desenvolvimento de projetos nas áreas de ciências em lógica de
                     programação em C++, Arduino e Microcontroladores e circuitos eletrônicos. </br>
@@ -52,18 +54,18 @@
                     e SMD.
                 </p>
             </div>
-            <div name="formacaoAcademica">
+            <div>
                 <h2>Formação Acadêmica</h2>
-                <div name="cursoTecnico" style="padding-left: 5%;">
+                <div class="paragrafoPaddingLeft5">
                     <h3>Curso Técnico</h3>
-                    <p style="padding-left: 5%;">
+                    <p class="paragrafoPaddingLeft5">
                         &#9679; Eletrônica, SENAI Anchieta – Julho / 2020. </br>
                         &#9679; Mecatrônica, SENAI Anchieta – Dezembro / 2018.
                     </p>
                 </div>
-                <div name="graduacao" style="padding-left: 5%;">
+                <div class="paragrafoPaddingLeft5">
                     <h3>Graduação</h3>
-                    <p style="padding-left: 5%;">
+                    <p class="paragrafoPaddingLeft5">
                         &#9679; Automação Industrial / Fatec Itaquera Miguel Reale (interrompido). <br>
                         &#9679; Análise e Desenvolvimento de Sistemas / Impacta (conclusão no 1º semestre de 2023)
                     </p>
@@ -71,22 +73,22 @@
             </div>
             <div name="cursosCertificacoes">
                 <h2>Cursos e Certificações</h2>
-                <p style="padding-left: 5%;">
+                <p class="paragrafoPaddingLeft5">
                     &#9679; JavaScript e TypeScript do básico ao avançado Udemy / 2022 <br>
                     &#9679; Banco de Dados e SQL Udemy / 2022 <br>
                     &#9679; PHP Essencial – Criando sistemas com PHP e MySQL Udemy / 2022 <br>
                     &#9679; Lógica de Programação SENAI São Paulo / 2020 <br>
                     &#9679; Tecnologia da Informação e Comunicação SENAI São Paulo / 2020 <br>
                     &#9679; Informática Básica SENAI Santa Cecilia / 2015 <br>
-                    &#9679; Inglês básico <br>
+                    &#9679; Inglês básico. <br>
                 </p>
             </div>
-            <div name="experienciaProfissional">
+            <div>
                 <h2>Experiência Profissional</h2>
-                <p style="padding-left: 5%;">
+                <p class="paragrafoPaddingLeft5">
                     &#9679; GA Tecnologia Ltda – (Fevereiro / 2021 – Janeiro / 2022)
                 </p>
-                <p style="padding-left: 5%;">
+                <p class="paragrafoPaddingLeft5">
                     &#10004; Responsável de produção de placas de circuitos eletrônicos e montagem de gabinetes
                     eletroeletrônicos. <br>
                     &#10004; Participação ativa em testes de circuitos eletrônicos em baixa tensão e em alta tensão.
