git commit -m"Arquivo CSS"

--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -11,6 +11,16 @@
 <body>
     <h1>Versoes do Curriculo</h1>
     <div>
+        <h2>Versao 1.2</h2>
+        <p>
+            &#9679; Descricao de alteracoes
+        </p>
+        <p>
+            Retirado todas as tags style do HTML e criado um arquivo de
+            CSS para a pagina de Curriculo.
+        </p>
+    </div>
+    <div>
         <h2>Versao 1.1</h2>
         <p>
             &#9679; Descricao de alteracoes
