git commit -m"Versao 1.3"

--- a/principal.html
+++ b/principal.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Curriculo</title>
-    <link rel="stylesheet" href="principal.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vitae</title>
+    <link rel="stylesheet" href="css/principal.css">
 </head>
 
 <body>
-
-    <div id="cabecalho">
-        <div>
-            <a href="/Curriculo/atualizacoes.html">Atualizacoes/Versoes</a>
-        </div>
-    </div>
+    <header id="header">
+        <nav id="header-nav">
+            <h2 id="whoI">Curriculum Vitae</h2>
+            <ul id="header-nav-ul">
+                <li id="header-nav-ul-li" ><a id="header-nav-ul-li-a" href="atualizacoes.html">Atualizacoes/Versoes</a></li>
+                <li id="header-nav-ul-li" ><a id="header-nav-ul-li-a" href="ipse.html">Quis est João?</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div id="folha">
 
         <div id="fotEInformacao">
             <div>
-                <img src="FotoCV.png" alt="Não foi possivel iniciar a imagem" width="150">
+                <img src="img/FotoCV.png" alt="Não foi possivel iniciar a imagem" width="150">
             </div>
             <div id="informacao">
                 <p>21 anos, solteiro</p>
