--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -6,9 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/atualizacoes.css">
 </head>
 
 <body>
+    <header id="header">
+        <nav id="header-nav">
+            <h2 id="whoI">Quis est João?</h2>
+            <ul id="header-nav-ul">
+                <li id="header-nav-ul-li" ><a id="header-nav-ul-li-a" href="principal.html">Curriculum Vitae</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Versoes do Curriculo</h1>
     <div>
         <h2>Versao 1.2</h2>
