--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -19,6 +19,19 @@
         </nav>
     </header>
 
+    <div>
+        <h1>Versao 1.3</h1>
+        <p>
+            &#9679; Descricao de alteracoes
+        </p>
+        <p>
+            Criado pasta para separar os arquivos corretamente.
+        </p>
+        <p>
+            Criado um arquivo Css por tela e criado o header nelas.
+        </p>
+    </div>
+
     <h1>Versoes do Curriculo</h1>
     <div>
         <h2>Versao 1.2</h2>
